--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emailjs": "^4.0.2",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
